--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
         <!-- Brand -->
         <div class="space-y-4">
           <div>
-            <h3 class="text-white font-bold text-xl mb-2">YCI Bangladesh</h3>
+            <h3 class="text-white font-bold text-xl mb-2">YCI bangladesh</h3>
             <p class="text-white/85 text-sm sm:text-base">
               To build a climate resilient Bangladesh where youth leads toward sustainable Change
             </p>
