--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                     `).join('')}
                   </div>
                 ` : ''}
-                <h3 class="article-title text-xl font-bold mb-3 group-hover:text-orange-400 transition-colors">${meta.title || 'Untitled'}</h3>
+                <h3 class="article-title text-xl font-bold mb-3 group-hover:text-400 transition-colors">${meta.title || 'Untitled'}</h3>
                 <p class="article-excerpt text-white text-opacity-90">${excerpt}</p>
                 <a href="article.html"
                    onclick="sessionStorage.setItem('selectedFile','${fullPath}'); return true;"
