--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
           colors: {
             primary: '#4FD1C5',
             secondary: '#2C5282',
+            accent: 'oklch(89.7% 0.196 126.665)',
           }
         }
       }
@@ -747,7 +748,7 @@
                     `).join('')}
                   </div>
                 ` : ''}
-                <h3 class="article-title text-xl font-bold mb-3 group-hover:text-[oklch(89.7%_0.196_126.665)] transition-colors">${meta.title || 'Untitled'}</h3>
+                <h3 class="article-title text-xl font-bold mb-3 group-hover:text-accent transition-colors">${meta.title || 'Untitled'}</h3>
                 <p class="article-excerpt text-white text-opacity-90">${excerpt}</p>
                 <a href="article.html"
                    onclick="sessionStorage.setItem('selectedFile','${fullPath}'); return true;"
