--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <!-- Announcements -->
     <section class="py-12 page-load delay-2">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 text-teal-300">Announcements</h2>
+        <h2 class="text-3xl md:text-4xl font-bold text-center mb-8 text-[oklch(89.7%_0.196_126.665)]-300">Announcements</h2>
         <div id="announcements-container" class="space-y-6">
           <div class="text-center py-6 text-white">Loading announcements...</div>
         </div>
