--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
     tailwind.config = {
       theme: {
         extend: {
-          colors: {
-            primary: '#4FD1C5',
-            secondary: '#2C5282',
-            accent: 'oklch(89.7% 0.196 126.665)',
+            colors: {
+                primary: '#4FD1C5',
+                secondary: '#2C5282',
+                accent: '#ff9800',
           }
         }
       }
