--- a/services.html
+++ b/services.html
@@ -41,6 +41,19 @@
       border-bottom: 1px solid rgba(255, 255, 255, 0.15);
     }
   </style>
+    <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+            colors: {
+                primary: '#4FD1C5',
+                secondary: '#2C5282',
+                accent: '#ff9800',
+          }
+        }
+      }
+    }
+  </script>
 </head>
 <body class="bg-gradient-to-br from-[#003f87] to-[#a8e6cf] min-h-screen">
 
