--- a/contact.html
+++ b/contact.html
@@ -302,23 +302,19 @@
     </div>
   </footer>
   
-  <!-- Floating Action Buttons -->
+  <!-- Floating Action Button -->
   <a href="articles.html" 
-     class="floating-btn fixed bottom-4 right-4 md:bottom-6 md:right-6 lg:bottom-8 lg:right-8 px-4 py-3 md:px-5 md:py-3.5 rounded-full bg-gradient-to-r from-white/20 to-white/10 text-white flex items-center justify-center font-semibold text-base md:text-lg shadow-2xl hover:scale-105 active:scale-95 transition-all duration-300 z-40 border border-white/30"
-     aria-label="View Our Events">
-    <i class="fas fa-calendar-alt mr-2 md:mr-3"></i>
-    <span class="hidden xs:inline">Our Events</span>
-    <i class="fas fa-arrow-right ml-1 md:ml-2"></i>
+     class="floating-btn fixed bottom-6 right-6 md:bottom-8 md:right-8 px-6 py-4 rounded-full bg-gradient-to-r from-white/20 to-white/10 text-white flex items-center justify-center font-semibold text-lg shadow-2xl hover:scale-105 transition-all duration-300 z-40 border border-white/30"
+     aria-label="Join Our Mission">
+    Our Events
   </a>
 
+    <!-- Floating Action Button -->
   <a href="team.html" 
-     class="floating-btn fixed bottom-4 left-4 md:bottom-6 md:left-6 lg:bottom-8 lg:left-8 px-4 py-3 md:px-5 md:py-3.5 rounded-full bg-gradient-to-r from-white/20 to-white/10 text-white flex items-center justify-center font-semibold text-base md:text-lg shadow-2xl hover:scale-105 active:scale-95 transition-all duration-300 z-40 border border-white/30"
-     aria-label="Meet Our Team">
-    <i class="fas fa-users mr-2 md:mr-3"></i>
-    <span class="hidden xs:inline">Our Team</span>
-    <i class="fas fa-arrow-right ml-1 md:ml-2"></i>
+     class="floating-btn fixed bottom-6 left-6 md:bottom-8 md:left-8 px-6 py-4 rounded-full bg-gradient-to-r from-white/20 to-white/10 text-white flex items-center justify-center font-semibold text-lg shadow-2xl hover:scale-105 transition-all duration-300 z-40 border border-white/30"
+     aria-label="Join Our Mission">
+    Our Team
   </a>
-
   <script>
     // Mobile menu toggle with animation
     document.getElementById('mobileMenuBtn').addEventListener('click', () => {
